# Praise-the-Omnissiah

./: README.md
Example/Coreboard_Demo/libraries/zf_common/: zf_common_headfile.h
Example/Coreboard_Demo/libraries/zf_device/: zf_device_uvc.h
Example/Motherboard_Demo/E01_01_button_switch_buzzer_demo/user/: build.sh  main.cpp
Example/Motherboard_Demo/E01_02_beep_demo/user/: build.sh
Example/Motherboard_Demo/E02_01_drv8701e_double_motor_control_demo/user/: main.cpp
Example/Motherboard_Demo/E02_02_servo_control_demo/user/: CMakeLists.txt  main.cpp
Example/Motherboard_Demo/E02_03_brushless_electric_regulating_demo/user/: main.cpp
Example/Motherboard_Demo/E03_01_encoder_dir_demo/user/: main.cpp
Example/Motherboard_Demo/E05_01_imu_demo/user/: main.cpp
Example/Motherboard_Demo/libraries/: README.md
LS2K300_Library/: build_all.sh
LS2K300_Library/Example/: delete_temp_file.sh
LS2K300_Library/Example/Coreboard_Demo/libraries/zf_components/tflm/: CMakeLists.txt
LS2K300_Library/Example/Motherboard_Demo/E6_wireless/E06_01_udp_demo/user/: CMakeLists.txt  main.cpp
Seekfree_LS2K0300_Opensource_Library/libraries/zf_common/: zf_common_headfile.h
Seekfree_LS2K0300_Opensource_Library/libraries/zf_device/: zf_device_uvc.cpp
Seekfree_LS2K0300_Opensource_Library/project/code/: PCA9685.cpp  PCA9685.h  arm.cpp  arm.h  encoder.cpp  encoder.h  key.cpp  key.h  motor.cpp  motor.h  motor.hpp  myi2c.cpp  myi2c.h
Seekfree_LS2K0300_Opensource_Library/project/user/: build.sh  main.cpp
buildroot-2405/: .config  build.sh  config_mini_16MB  config_prt_scanner_6.6kernel  config_prt_scanner_6.6kernel_ubi  config_systemd  config_systemd_2.0
buildroot-2405/arch/: Config.in  Config.in.loongarch
buildroot-2405/package/busybox/: busybox-prt-scanner.config
buildroot-2405/package/glibc/: Config.in
buildroot-2405/seekfree_overlay/boot/: boot.cfg
buildroot-2405/seekfree_overlay/etc/: passwd  profile  wpa_supplicant.conf
buildroot-2405/support/gnuconfig/: config.sub
buildroot-2405/toolchain/: Config.in
linux-4.19-202506/: .gitignore  README  build.sh  seekfree_2k300_core_board_defconfig  version.md
linux-4.19-202506/drivers/: Kconfig  Makefile
linux-4.19-202506/drivers/dma/: Kconfig  Makefile  lsia_dma.c
linux-4.19-202506/drivers/i2c/busses/: i2c-ls.c
linux-4.19-202506/drivers/pwm/: pwm-ls.c
linux-4.19-202506/drivers/rtc/: Kconfig  Makefile  rtc-ls2x.c  rtc-sd3078.c
linux-4.19-202506/drivers/se/: Kconfig  Makefile  readme.txt  setup.sh  test.c  wst_se_common_type.h  wst_se_define.h  wst_se_echip_driver.c  wst_se_echip_driver.h  wst_se_ktrans.h
linux-4.19-202506/drivers/seekree_libraries/: Kconfig  Makefile  log.md
linux-4.19-202506/drivers/spi/: Kconfig  Makefile  spi-ls-io.c  spi-ls-v1.c  spi-mem.c
ls2k0300_linux_4.19/: .config.old  README.md  build.sh  modules.builtin
ls2k0300_linux_4.19/block/: deadline-iosched.ko
ls2k0300_linux_4.19/crypto/: anubis.ko  arc4.ko  authenc.ko  authencesn.ko  blowfish_common.ko  blowfish_generic.ko  cast5_generic.ko  cast6_generic.ko  cast_common.ko  ccm.ko  deflate.ko  des_generic.ko  echainiv.ko  gcm.ko  gf128mul.ko  ghash-generic.ko  khazad.ko  md4.ko  michael_mic.ko  modules.builtin  serpent_generic.ko  sha512_generic.ko  tea.ko  tgr192.ko  twofish_common.ko  twofish_generic.ko  wp512.ko  xor.ko
ls2k0300_linux_4.19/crypto/async_tx/: async_memcpy.ko  async_pq.ko  async_raid6_recov.ko  async_tx.ko  async_xor.ko
ls2k0300_linux_4.19/drivers/: modules.builtin
ls2k0300_linux_4.19/drivers/acpi/: modules.builtin
ls2k0300_linux_4.19/drivers/char/: raw.ko
ls2k0300_linux_4.19/drivers/dma/: modules.builtin
ls2k0300_linux_4.19/drivers/gpio/: modules.builtin
ls2k0300_linux_4.19/drivers/gpu/: modules.builtin
ls2k0300_linux_4.19/drivers/hwmon/: pwm-fan.ko
ls2k0300_linux_4.19/drivers/i2c/: modules.builtin
ls2k0300_linux_4.19/drivers/iio/: modules.builtin
ls2k0300_linux_4.19/drivers/input/: ff-memless.ko  input-polldev.ko  modules.builtin
ls2k0300_linux_4.19/drivers/md/: dm-raid.ko  md-mod.ko  raid0.ko  raid1.ko  raid10.ko  raid456.ko
ls2k0300_linux_4.19/drivers/media/: modules.builtin
ls2k0300_linux_4.19/drivers/misc/: modules.builtin
ls2k0300_linux_4.19/drivers/mmc/: modules.builtin
ls2k0300_linux_4.19/drivers/mtd/: modules.builtin
ls2k0300_linux_4.19/drivers/net/: mdio.ko  modules.builtin
ls2k0300_linux_4.19/drivers/pwm/: modules.builtin
ls2k0300_linux_4.19/drivers/rtc/: modules.builtin
ls2k0300_linux_4.19/drivers/scsi/: ch.ko  modules.builtin
ls2k0300_linux_4.19/drivers/seekree_libraries/: modules.builtin
ls2k0300_linux_4.19/drivers/spi/: modules.builtin
ls2k0300_linux_4.19/drivers/thermal/: ls2k_thermal.ko
ls2k0300_linux_4.19/drivers/tty/: modules.builtin
ls2k0300_linux_4.19/drivers/usb/: modules.builtin
ls2k0300_linux_4.19/drivers/video/: modules.builtin
ls2k0300_linux_4.19/fs/: binfmt_misc.ko  modules.builtin
ls2k0300_linux_4.19/fs/fat/: fat.ko  vfat.ko
ls2k0300_linux_4.19/fs/isofs/: isofs.ko
ls2k0300_linux_4.19/fs/nfs/: modules.builtin
ls2k0300_linux_4.19/fs/nls/: modules.builtin
ls2k0300_linux_4.19/kernel/: bounds.s
ls2k0300_linux_4.19/lib/: modules.builtin
ls2k0300_linux_4.19/lib/raid6/: raid6_pq.ko
ls2k0300_linux_4.19/net/: modules.builtin
ls2k0300_linux_4.19/net/802/: p8022.ko  psnap.ko  stp.ko
ls2k0300_linux_4.19/net/bridge/: bridge.ko
ls2k0300_linux_4.19/net/ipv4/: esp4.ko
ls2k0300_linux_4.19/net/llc/: llc.ko
ls2k0300_linux_4.19/scripts/mod/: devicetable-offsets.s
ls2k0300_linux_4.19/sound/: modules.builtin
ls2k0300_linux_4.19/sound/core/: snd-hwdep.ko  snd-seq-device.ko
ls2k0300_linux_4.19/sound/hda/: snd-hda-core.ko
ls2k0300_linux_4.19/sound/soc/: modules.builtin
【原理图】原理图 丝印图 尺寸图 位号图/主板/V1.0/: todo.md
【文档】说明书 芯片手册等/LS2K30x刷系统教程/: readme.md
【文档】说明书 芯片手册等/核心板文档/: readme.md
【软件】交叉编译工具 上位机等/: 其他必装软件安装包.txt
【软件】交叉编译工具 上位机等/opencv_4_10_build/lib/: libopencv_calib3d.so.4.10.0  libopencv_features2d.so.4.10.0  libopencv_video.so.4.10.0
【软件】交叉编译工具 上位机等/屏幕驱动/: fb_st7735r.ko  fb_st7789v.ko  readme.md
【软件】交叉编译工具 上位机等/编译好的内核文件/: readme.md
(+317 files in other folders)
